# schainbackend/routes/api.php
@@ -4,6 +4,9 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\ItemController;
 use App\Http\Controllers\Api\RoleController;
+use App\Http\Controllers\Api\FitemBoxController;
+
+
 Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
@@ -11,5 +14,5 @@ Route::get('/user', function (Request $request) {
 
 Route::apiResource('items', ItemController::class);
 Route::apiResource('roles', RoleController::class);
-
+Route::apiResource('fitem-boxes', FitemBoxController::class);
 
